# Supacharged

./: .gitignore  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  Dockerfile  embedding.py  main.py  pyproject.toml
apps/api/agents/: ats_creator.py
apps/api/config/: config.py
apps/api/schemas/: ats.py
apps/api/scripts/: ingest_components.py  process_component.py  test_supabase_upload.py
apps/api/services/: supabase_uploader.py
apps/api/src/: main.py
apps/api/src/agents/: ats_creator.py
apps/api/src/config/: config.py
apps/api/src/db/: db.py
apps/api/src/models/: component.py
apps/api/src/routers/: auth.py
apps/api/src/schemas/: component.py
apps/api/src/services/: user_services.py
apps/api/tests/: test_db.py  test_embedding.py  test_ingest_pipeline.py  test_main.py
apps/api/tests/agents/: test_gemini_integration.py
