[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic-settings>=2.0.0",
    "supabase>=2.0.0",
    "uvicorn>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]
